; ModuleID = '/home/carl/AnghaBench/sway/common/extr_log.c_sway_log_init.c'
source_filename = "/home/carl/AnghaBench/sway/common/extr_log.c_sway_log_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWAY_LOG_IMPORTANCE_LAST = common dso_local global i64 0, align 8
@log_importance = common dso_local global i64 0, align 8
@log_terminate = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sway_log_init(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @SWAY_LOG_IMPORTANCE_LAST, align 8
  %7 = icmp slt i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i64, i64* %3, align 8
  store i64 %9, i64* @log_importance, align 8
  br label %10

10:                                               ; preds = %8, %2
  %11 = load i64, i64* %4, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %10
  %14 = load i64, i64* %4, align 8
  store i64 %14, i64* @log_terminate, align 8
  br label %15

15:                                               ; preds = %13, %10
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
